<resources>
    <string name="app_name">HushGuard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="icon">Icon</string>
    <string name="color">Color</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="profile_details">Profile Details</string>
    <string name="group_details">Group Details</string>
    <string name="activate">Activate</string>
    <string name="activate_dnd">Activate DND</string>
    <string name="screen_3_instructions">1. Use it control DND status\n2. Created profiles appear here. Long click a profile to edit it. When the app is launched for the first time this will be empty.\n3. Use this switch to activate a particular profile.\n4. Use this to create new profile.</string>
    <string name="finish">Finish</string>
    <string name="ask_permissions">Ask permissions</string>
    <string name="add_profiles_to_get_started">Add profiles to get started</string>
    <string name="turn_on_dnd_to_see_the_profiles">Turn on dnd to see the profiles</string>
</resources>