<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="profileListViewModel"
            type="com.kinetx.silentproject.viewmodels.ProfileListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".fragments.ProfileListFragment">


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/home_dnd_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/activate_dnd"
            android:visibility="visible"
            android:textColor="@color/white"
            app:trackTint="@color/black_500"
            android:textSize="24sp"
            android:checked="@{profileListViewModel.dndStatus}"
            android:onCheckedChanged="@{(switch, checked) -> profileListViewModel.updateProfileListVisibility(checked)}"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profile_list_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:visibility="@{profileListViewModel.isProfileListVisible()}"
            app:layout_constraintBottom_toTopOf="@+id/add_profile_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_dnd_switch"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_profile_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_baseline_add_24"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:visibility="visible"
            app:fabCustomSize="60dp"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/profile_list_info_no_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/add_profiles_to_get_started"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="@{profileListViewModel.isInfoProfileVisible()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_dnd_switch" />

        <TextView
            android:id="@+id/profile_list_info_no_dnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="164dp"
            android:text="@string/turn_on_dnd_to_see_the_profiles"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="@{profileListViewModel.isInfoDNDVisible()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_dnd_switch" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>